Updated submodule; added release notes; switched to "only current R# is supported" model

--- a/Src/Roflcopter.nuspec
+++ b/Src/Roflcopter.nuspec
@@ -9,6 +9,7 @@
     <!--<licenseUrl></licenseUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>ROFL ROFL ROFL ROFL ROFL ROFL LOL ROFL ROFL ROFL </description>
+    <releaseNotes>$ReleaseNotes$</releaseNotes>
     <tags>rofl lol</tags>
     <dependencies>
       <dependency id="Wave" version="$DependencyVer$" />
