--- a/Src/TestData/Roflcopter.Sample/Roflcopter.Sample/Roflcopter.Sample.csproj
+++ b/Src/TestData/Roflcopter.Sample/Roflcopter.Sample/Roflcopter.Sample.csproj
@@ -34,7 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="SomeClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
