--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
 *.tmp
 
 # User-specific files
+.vs/
 *.suo
 *.user
 *.sln.docstates
+.idea/
 
 # Build results
 [Bb]in/
 [Oo]bj/
 
 # NuGet Packages
-packages/
+[Pp]ackages/
 *.nupkg
 
 # custom ignores
 
 /Build/Output/
-bin.R??/
-obj.R??/
-
