--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -34,13 +34,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SomeClass.cs" />
+    <Compile Include="CopyFqnProviders\SomeClass.cs" />
+    <Compile Include="TodoItems\SomeClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Sample.xml" />
+    <Content Include="TodoItems\Sample.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
