--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.csproj
@@ -23,6 +23,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\Highlighting\SimpleTreeNodeHighlightingBase.cs" Link="ReSharperExtensionsShared\SimpleTreeNodeHighlightingBase.cs" />
+    <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\ProblemAnalyzers\SimpleElementProblemAnalyzer.cs" Link="ReSharperExtensionsShared\SimpleElementProblemAnalyzer.cs" />
     <Compile Include="**\*.cs" Exclude="obj\**" />
   </ItemGroup>
 
