Add 'InvalidAssertionMessage' highlighting

--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AssertionMessages\InvalidAssertionMessageHighlightingTests\*ErrorSamples*.cs" />
+    <None Include="AssertionMessages\InvalidAssertionMessageHighlightingTests\*ErrorSamples*.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.*" />
   </ItemGroup>
 
