Refactor tests to use value tuples

--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.1.*" />
+    <PackageReference Include="System.ValueTuple" Version="4.*" />
   </ItemGroup>
 
   <ItemGroup>
