--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
 
