Include default 'branch' live template in extension package

--- a/Src/Roflcopter.Plugin/Roflcopter.nuspec
+++ b/Src/Roflcopter.Plugin/Roflcopter.nuspec
@@ -17,5 +17,6 @@
   </metadata>
   <files>
     <file src="$BinDirInclude$\$Configuration$\Roflcopter.Plugin.*" target="dotFiles" />
+    <file src="Macros\LiveTemplates.DotSettings" target="dotFiles\Extensions\ReSharper.Roflcopter\settings\" />
   </files>
 </package>
