--- a/Src/Roflcopter.Plugin/Properties/launchSettings.json
+++ b/Src/Roflcopter.Plugin/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Roflcopter.Plugin": {
+    "Plugin (in VS)": {
       "commandName": "Executable",
       "executablePath": "$(DevEnvDir)devenv.exe",
       "commandLineArgs": "/RootSuffix ExpRS$(ReSharperVersionIdentifier) /ReSharper.Internal $(SolutionDir)Src\\Roflcopter.Plugin.Tests\\test\\data\\Roflcopter.Sample.sln"
