--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.R20172.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.R20172.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.2.0-eap*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.2.*" />
     <PackageReference Include="System.ValueTuple" Version="4.*" />
   </ItemGroup>
 
