--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.R20172.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.R20172.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.2.0-eap*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.2.*" />
   </ItemGroup>
 
   <ItemGroup>
