Add quick fix for "Mismatch between type and file name"

--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="AssertionMessages\InvalidAssertionMessageHighlightingTests\*ErrorSamples*.cs" />
-    <None Include="AssertionMessages\InvalidAssertionMessageHighlightingTests\*ErrorSamples*.cs" />
+    <Compile Remove="**\*ErrorSamples.cs" />
+    <None Include="**\*ErrorSamples.cs" />
+    <Compile Remove="**\QuickFix\**" />
+    <None Include="**\QuickFix\**" />
   </ItemGroup>
 
   <ItemGroup>
