--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20173.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20173.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.1.*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.3.0-eap*" />
     <PackageReference Include="System.ValueTuple" Version="4.*" />
   </ItemGroup>
 
