--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20173.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20173.csproj
@@ -8,6 +8,10 @@
     <DebugType>full</DebugType> <!-- necessary for OpenCover -->
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\Highlighting\SimpleTreeNodeHighlightingBase.cs" Link="ReSharperExtensionsShared\SimpleTreeNodeHighlightingBase.cs" />
     <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\ProblemAnalyzers\SimpleElementProblemAnalyzer.cs" Link="ReSharperExtensionsShared\SimpleElementProblemAnalyzer.cs" />
@@ -15,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.1.*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.3.0-eap*" />
   </ItemGroup>
 
   <ItemGroup>
