--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.R20171.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.R20171.csproj
@@ -1,28 +1,10 @@
-﻿<Project>
-  <PropertyGroup>
-    <ReSharperVersionIdentifier>20171</ReSharperVersionIdentifier>
-
-    <!-- This is a workaround for https://github.com/dotnet/sdk/issues/980: -->
-    <BaseIntermediateOutputPath>obj\R$(ReSharperVersionIdentifier)\</BaseIntermediateOutputPath>
-  </PropertyGroup>
-  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
-    <RootNamespace>Roflcopter.Plugin.Tests</RootNamespace>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <DebugType>full</DebugType> <!-- necessary for OpenCover -->
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NET45;JET_MODE_ASSERT;RESHARPER$(ReSharperVersionIdentifier)</DefineConstants>
-    <OutputPath>bin\R$(ReSharperVersionIdentifier)\Debug\</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;RELEASE;NET45;RESHARPER$(ReSharperVersionIdentifier)</DefineConstants>
-    <OutputPath>bin\R$(ReSharperVersionIdentifier)\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -38,7 +20,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Roflcopter.Plugin\Roflcopter.Plugin.R$(ReSharperVersionIdentifier).csproj" />
   </ItemGroup>
-
-  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
 </Project>
