--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20172.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20172.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Roflcopter.Plugin\Roflcopter.Plugin.R$(ReSharperVersionIdentifier).csproj" />
+    <ProjectReference Include="..\Roflcopter.Plugin\Roflcopter.Plugin.$(ReSharperVersionIdentifier).csproj" />
   </ItemGroup>
 
 </Project>
