--- a/Src/Roflcopter.Plugin/Properties/launchSettings.json
+++ b/Src/Roflcopter.Plugin/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Plugin (in VS)": {
       "commandName": "Executable",
       "executablePath": "$(DevEnvDir)devenv.exe",
-      "commandLineArgs": "/RootSuffix ExpRS$(ReSharperVersionIdentifier) /ReSharper.Internal $(SolutionDir)Src\\Roflcopter.Plugin.Tests\\test\\data\\Roflcopter.Sample.sln"
+      "commandLineArgs": "/RootSuffix Exp$(ReSharperVersionIdentifier) /ReSharper.Internal $(SolutionDir)Src\\Roflcopter.Plugin.Tests\\test\\data\\Roflcopter.Sample.sln"
     }
   }
 }
