--- a/SolutionItems.csproj
+++ b/SolutionItems.csproj
@@ -7,10 +7,12 @@
 
   <ItemGroup>
     <None Include="*" Exclude="*.csproj*" />
-    <None Include=".teamcity\**\*" />
+    <None Include=".teamcity\**" />
     <None Include="Build\*" />
-    <None Include="Doc\**\*" />
-    <None Include="Shared\Build\**\*" />
+    <None Include="Doc\**" />
+    <None Include="Src\RiderPlugin\*" />
+    <None Include="Src\RiderPlugin\src\**" />
+    <None Include="Shared\Build\**" />
   </ItemGroup>
 
   <ItemGroup>
