--- a/Src/Roflcopter.Plugin/Directory.Build.props
+++ b/Src/Roflcopter.Plugin/Directory.Build.props
@@ -14,6 +14,8 @@
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);$(ReSharperVersionIdentifier)</DefineConstants>
+    <DefineConstants Condition="$(ReSharperVersionIdentifier.StartsWith('RS'))">$(DefineConstants);RESHARPER</DefineConstants>
+    <DefineConstants Condition="$(ReSharperVersionIdentifier.StartsWith('RD'))">$(DefineConstants);RIDER</DefineConstants>
     <DefineConstants Condition="'$(Configuration)'=='Debug'">$(DefineConstants);JET_MODE_ASSERT</DefineConstants>
   </PropertyGroup>
 
