--- a/Src/Roflcopter.Plugin/Properties/launchSettings.json
+++ b/Src/Roflcopter.Plugin/Properties/launchSettings.json
@@ -4,6 +4,12 @@
       "commandName": "Executable",
       "executablePath": "$(DevEnvDir)devenv.exe",
       "commandLineArgs": "/RootSuffix Exp$(ReSharperVersionIdentifier) /ReSharper.Internal $(SolutionDir)Src\\Roflcopter.Plugin.Tests\\test\\data\\Roflcopter.Sample.sln"
+    },
+    "Plugin (in Rider)": {
+      "commandName": "Executable",
+      "executablePath": "$(ComSpec)",
+      "commandLineArgs": "/c gradlew runIde",
+      "workingDirectory": "$(SolutionDir)Src\\RiderPlugin"
     }
   }
 }
