--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.*" />
+    <PackageReference Include="NUnit" Version="3.*" />
   </ItemGroup>
 
 </Project>
