Add 'JET_MODE_ASSERT' symbol in debug configuration

--- a/Src/Roflcopter.Plugin/Directory.Build.props
+++ b/Src/Roflcopter.Plugin/Directory.Build.props
@@ -13,6 +13,7 @@
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);$(ReSharperVersionIdentifier)</DefineConstants>
+    <DefineConstants Condition="'$(Configuration)'=='Debug'">$(DefineConstants);JET_MODE_ASSERT</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup>
