--- a/Src/Roflcopter.Plugin.Tests/Directory.Build.props
+++ b/Src/Roflcopter.Plugin.Tests/Directory.Build.props
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <BaseIntermediateOutputPath>obj\$(ReSharperVersionIdentifier)\</BaseIntermediateOutputPath>
+    <DefaultItemExcludes>$(DefaultItemExcludes);obj\**</DefaultItemExcludes>
     <RootNamespace>$(ProjectNameWithoutVersion)</RootNamespace>
     <OutputPath>bin\$(ReSharperVersionIdentifier)\$(Configuration)\</OutputPath>
   </PropertyGroup>
@@ -14,6 +15,10 @@
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);$(ReSharperVersionIdentifier)</DefineConstants>
     <DefineConstants Condition="'$(Configuration)'=='Debug'">$(DefineConstants);JET_MODE_ASSERT</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);test\data\**</DefaultItemExcludes>
   </PropertyGroup>
 
 </Project>
