--- a/Src/Roflcopter.Plugin/Directory.Build.props
+++ b/Src/Roflcopter.Plugin/Directory.Build.props
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <BaseIntermediateOutputPath>obj\$(ReSharperVersionIdentifier)\</BaseIntermediateOutputPath>
+    <DefaultItemExcludes>$(DefaultItemExcludes);obj\**</DefaultItemExcludes>
     <RootNamespace>$(ProjectNameWithoutVersion)</RootNamespace>
     <OutputPath>bin\$(ReSharperVersionIdentifier)\$(Configuration)\</OutputPath>
   </PropertyGroup>
