Use default test data paths for 'MismatchedFileNameHighlightingTests' and 'MismatchedFileNameHighlightingQuickFixTest'

--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -7,8 +7,8 @@
   <ItemGroup>
     <Compile Remove="**\*ErrorSamples.cs" />
     <None Include="**\*ErrorSamples.cs" />
-    <Compile Remove="**\QuickFix\**" />
-    <None Include="**\QuickFix\**" />
+    <Compile Remove="**\*QuickFixTest\**" />
+    <None Include="**\*QuickFixTest\**" />
   </ItemGroup>
 
   <ItemGroup>
