--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20172.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20172.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="test\data\**" />
+    <None Remove="test\data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="2017.2.*" />
     <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
