--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20173.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20173.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.3.0-eap*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2017.3.*" />
     <PackageReference Include="System.ValueTuple" Version="4.*" />
   </ItemGroup>
 
