--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20173.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20173.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.3.0-eap*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.3.*" />
   </ItemGroup>
 
   <ItemGroup>
