--- a/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
+++ b/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
@@ -37,14 +37,14 @@
       <add-to-group group-id="UnitTesting" anchor="after" relative-to-action="RiderUnitTestDebugContextAction"/>
       <add-to-group group-id="EditorPopupMenu1.RiderSection" anchor="after"
                     relative-to-action="RiderUnitTestDebugContextAction"/>
-      <keyboard-shortcut first-keystroke="control U" second-keystroke="F" keymap="Visual Studio"/>
-      <keyboard-shortcut first-keystroke="control U" second-keystroke="control F" keymap="Visual Studio"/>
-      <keyboard-shortcut first-keystroke="meta U" second-keystroke="F" keymap="Visual Studio OSX"/>
-      <keyboard-shortcut first-keystroke="meta U" second-keystroke="meta F" keymap="Visual Studio OSX"/>
-      <keyboard-shortcut first-keystroke="control T" second-keystroke="F" keymap="ReSharper" replace-all="true"/>
-      <keyboard-shortcut first-keystroke="control T" second-keystroke="control F" keymap="ReSharper"/>
-      <keyboard-shortcut first-keystroke="meta T" second-keystroke="F" keymap="ReSharper OSX" replace-all="true"/>
-      <keyboard-shortcut first-keystroke="meta T" second-keystroke="meta F" keymap="ReSharper OSX"/>
+      <keyboard-shortcut first-keystroke="control U" second-keystroke="I" keymap="Visual Studio"/>
+      <keyboard-shortcut first-keystroke="control U" second-keystroke="control I" keymap="Visual Studio"/>
+      <keyboard-shortcut first-keystroke="meta U" second-keystroke="I" keymap="Visual Studio OSX"/>
+      <keyboard-shortcut first-keystroke="meta U" second-keystroke="meta I" keymap="Visual Studio OSX"/>
+      <keyboard-shortcut first-keystroke="control T" second-keystroke="I" keymap="ReSharper" replace-all="true"/>
+      <keyboard-shortcut first-keystroke="control T" second-keystroke="control I" keymap="ReSharper"/>
+      <keyboard-shortcut first-keystroke="meta T" second-keystroke="I" keymap="ReSharper OSX" replace-all="true"/>
+      <keyboard-shortcut first-keystroke="meta T" second-keystroke="meta I" keymap="ReSharper OSX"/>
     </action>
   </actions>
 
