--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20181.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20181.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net451</TargetFramework>
     <AssemblyVersion>0.0.0.1</AssemblyVersion>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
@@ -15,8 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.2.*" />
-    <PackageReference Include="JetBrains.Psi.Features.VisualStudio" Version="109.*" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2018.1.*" />
   </ItemGroup>
 
   <ItemGroup>
