--- a/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
+++ b/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
@@ -8,8 +8,7 @@
 
 <span>At the moment the following features have been ported to Rider.</span>
 <ul>
-  <li>Git Branch Name Live Template (no Live Template configuration in Rider atm., 
-      see <a href="https://youtrack.jetbrains.com/issue/RIDER-548#comment=27-1325254">RIDER-548</a>. Use VS to edit Live Templates.)</li>
+  <li>Git Branch Name Live Template</li>
   <li>"Mismatch between type and file name" warning</li>
   <li>Parameterized test warnings for NUnit tests</li>
   <li>"Assertion message is invalid" warning</li>
