--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20191.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20191.csproj
@@ -15,13 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2018.2.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="WindowsBase" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2019.1.*" />
   </ItemGroup>
 
 </Project>
