--- a/Src/RiderPlugin/build.gradle
+++ b/Src/RiderPlugin/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.1.51'
-    id 'org.jetbrains.intellij' version '0.2.17'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'org.jetbrains.intellij' version '0.4.9'
+}
+
+repositories {
+    maven { url 'https://cache-redirector.jetbrains.com/intellij-repository/snapshots' }
+    maven { url 'https://cache-redirector.jetbrains.com/maven-central' }
 }
 
 version = version != 'unspecified' ? version : '0.0.0.1'
@@ -11,12 +16,9 @@ if (!project.hasProperty('configuration')) ext.configuration = 'Debug'
 intellij {
     type = 'RD'
     // https://www.jetbrains.com/intellij-repository/releases
-    version = '2020.1.0'
+    version = '2020.1.2'
     downloadSources = false
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 compileKotlin {
     kotlinOptions { jvmTarget = "1.8" }
