--- a/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
+++ b/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
@@ -33,9 +33,10 @@
     <action id="Roflcopter.RiderUnitTestRunFileAction"
             class="com.jetbrains.rider.roflcopter.unitTesting.RiderUnitTestRunFileAction"
             text="Run All Tests in _File">
-      <add-to-group group-id="UnitTesting" anchor="after" relative-to-action="RiderUnitTestDebugContextAction"/>
+      <add-to-group group-id="Rider.UnitTesting.Main" anchor="after"
+                    relative-to-action="Rider.UnitTesting.RunContext"/>
       <add-to-group group-id="EditorPopupMenu1.RiderSection" anchor="after"
-                    relative-to-action="RiderUnitTestDebugContextAction"/>
+                    relative-to-action="Rider.UnitTesting.RunContext"/>
       <keyboard-shortcut first-keystroke="control U" second-keystroke="I" keymap="Visual Studio"/>
       <keyboard-shortcut first-keystroke="control U" second-keystroke="control I" keymap="Visual Studio"/>
       <keyboard-shortcut first-keystroke="meta U" second-keystroke="I" keymap="Visual Studio OSX"/>
