--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20202.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20202.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="2020.2.*" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
   </ItemGroup>
 
   <ItemGroup>
