--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20211.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20211.csproj
@@ -15,7 +15,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Rider.SDK" Version="2020.3.*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2021.1.*-*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
 
 </Project>
