--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20211.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20211.csproj
@@ -15,13 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2020.3.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="WindowsBase" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2021.1.*-*" />
   </ItemGroup>
 
 </Project>
