--- a/Src/Roflcopter.Plugin/Directory.Build.props
+++ b/Src/Roflcopter.Plugin/Directory.Build.props
@@ -10,6 +10,8 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);obj\**</DefaultItemExcludes>
     <RootNamespace>$(ProjectNameWithoutVersion)</RootNamespace>
     <OutputPath>bin\$(ReSharperVersionIdentifier)\$(Configuration)\</OutputPath>
+
+    <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);MSB3277</MSBuildWarningsAsMessages>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,7 +22,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <ReSharperInstallationsDirectoryInstancePart>Exp$(ReSharperVersionIdentifier)</ReSharperInstallationsDirectoryInstancePart>
+    <ReSharperInstallationsDirectoryInstancePart>ReSharper</ReSharperInstallationsDirectoryInstancePart>
   </PropertyGroup>
   <Import Project="..\..\Shared\Build\CopyToReSharperInstallationsDirectory.targets" />
 
