--- a/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
+++ b/Src/Roflcopter.Plugin.Tests/test/data/Roflcopter.Sample.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="NUnit" Version="3.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Web" />
+  </ItemGroup>
+
 </Project>
