Switch to `dotnet test` and coverlet and GitHub actions

--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20221.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20221.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net472</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-    <DebugType>full</DebugType> <!-- necessary for OpenCover -->
+    <IsTestProject>true</IsTestProject>
+    <RunSettingsFilePath>Test.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,8 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.1.*" PrivateAssets="all" />
+    <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1" PrivateAssets="all" />
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2022.1.*-*" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.*" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.*" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.*" />
+    <!--<PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.36" />-->
   </ItemGroup>
 
   <ItemGroup>
