--- a/SolutionItems.csproj
+++ b/SolutionItems.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Include="*" Exclude="*.csproj*" />
+    <None Include=".github\**" />
     <None Include=".teamcity\**" />
     <None Include="Build\*" />
     <None Include="Doc\**" />
@@ -17,10 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit.ConsoleRunner" Version="3.12.0" />
-    <PackageReference Include="NUnit.Extension.TeamCityEventListener" Version="1.0.7" />
-    <PackageReference Include="OpenCover" Version="4.7.1221" />
-    <PackageReference Include="ReportGenerator" Version="4.8.12" />
+    <PackageReference Include="ReportGenerator" Version="5.1.6" />
   </ItemGroup>
 
 </Project>
