--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20221.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RS20221.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.1.*" PrivateAssets="all" />
     <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1" PrivateAssets="all" />
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2022.1.*-*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkNuGetPackageVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.*" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.*" />
     <!--<PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.36" />-->
