--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20221.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20221.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Rider.SDK" Version="2022.1.*-*" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="$(SdkNuGetPackageVersion)" />
   </ItemGroup>
 
 </Project>
