--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20221.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20221.csproj
@@ -7,6 +7,17 @@
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NuspecFile>Roflcopter.nuspec</NuspecFile>
+
+    <PackageVersionReSharperVersionPostfix>0$(ReSharperVersionYY)$(ReSharperVersionMinor)</PackageVersionReSharperVersionPostfix>
+    <PackageVersion>$([System.Text.RegularExpressions.Regex]::Replace($(Version), "^(\d+\.\d+\.\d+\.\d+)", "${1}$(PackageVersionReSharperVersionPostfix)"))</PackageVersion>
+
+    <PackageWaveDependency>[$(ReSharperVersionYY)$(ReSharperVersionMinor).0]</PackageWaveDependency>
+
+    <NuspecProperties>PackageVersion=$(PackageVersion);OutputPath=$(OutputPath);PackageWaveDependency=$(PackageWaveDependency);PackageReleaseNotes=$(PackageReleaseNotes)</NuspecProperties>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\Highlighting\SimpleTreeNodeHighlightingBase.cs" Link="ReSharperExtensionsShared\SimpleTreeNodeHighlightingBase.cs" />
     <Compile Include="..\..\Shared\Src\ReSharperExtensionsShared\ProblemAnalyzers\SimpleElementProblemAnalyzer.cs" Link="ReSharperExtensionsShared\SimpleElementProblemAnalyzer.cs" />
@@ -14,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2022.1.*-*" />
+    <PackageReference Include="JetBrains.ReSharper.SDK" Version="$(SdkNuGetPackageVersion)" />
   </ItemGroup>
 
   <ItemGroup>
