--- a/Src/RiderPlugin/build.gradle
+++ b/Src/RiderPlugin/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.6.21'
-    id 'org.jetbrains.intellij' version '1.5.3'     // https://github.com/JetBrains/gradle-intellij-plugin/releases
+    id 'org.jetbrains.intellij' version '1.6.0'     // https://github.com/JetBrains/gradle-intellij-plugin/releases
 }
 
 repositories {
@@ -16,7 +16,7 @@ if (!project.hasProperty('configuration')) ext.configuration = 'Debug'
 intellij {
     type = 'RD'
     // https://www.jetbrains.com/intellij-repository/releases
-    version = '2022.1'
+    version = '2022.2-SNAPSHOT'
     downloadSources = false
     instrumentCode = false
 }
@@ -26,7 +26,7 @@ compileKotlin {
 }
 
 prepareSandbox {
-    from("$projectDir/../${gradle.resharperPluginProjectName}/bin/RD20221/$configuration", {
+    from("$projectDir/../${gradle.resharperPluginProjectName}/bin/RD20222/$configuration", {
         into "${rootProject.name}/dotnet"
         include "${gradle.resharperPluginProjectName}*"
     })
