Disable NuGet 'NU5100' ("The folder being packaged contains an assembly file that is not in lib folder") warning

--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20222.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20222.csproj
@@ -16,6 +16,8 @@
     <PackageWaveDependency>[$(ReSharperVersionYY)$(ReSharperVersionMinor).0]</PackageWaveDependency>
 
     <NuspecProperties>PackageVersion=$(PackageVersion);OutputPath=$(OutputPath);PackageWaveDependency=$(PackageWaveDependency);PackageReleaseNotes=$(PackageReleaseNotes)</NuspecProperties>
+
+    <NoWarn>$(NoWarn);NU5100</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
