Fix obsolete '.Value' access

--- a/Src/PluginAndTests.props
+++ b/Src/PluginAndTests.props
@@ -18,6 +18,7 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);obj\**</DefaultItemExcludes>
     <RootNamespace>$(ProjectNameWithoutVersion)</RootNamespace>
     <OutputPath>bin\$(ReSharperVersionIdentifier)\$(Configuration)\</OutputPath>
+    <LangVersion>9.0</LangVersion>
 
     <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);MSB3277</MSBuildWarningsAsMessages>
   </PropertyGroup>
