--- a/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20223.csproj
+++ b/Src/Roflcopter.Plugin.Tests/Roflcopter.Plugin.Tests.RD20223.csproj
@@ -16,14 +16,14 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.1.*" PrivateAssets="all" />
     <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1" PrivateAssets="all" />
-    <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkNuGetPackageVersion)" />
+    <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="$(SdkNuGetPackageVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.*" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.*" />
     <!--<PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.36" />-->
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Roflcopter.Plugin\Roflcopter.Plugin.$(ReSharperVersionIdentifier).csproj" />
+    <ProjectReference Include="..\Roflcopter.Plugin\Roflcopter.Plugin.RD20223.csproj" />
   </ItemGroup>
 
   <ItemGroup>
