Move to resource strings

--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20223.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RD20223.csproj
@@ -17,4 +17,19 @@
     <PackageReference Include="JetBrains.Rider.SDK" Version="$(SdkNuGetPackageVersion)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Macros\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Macros\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
