--- a/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20223.csproj
+++ b/Src/Roflcopter.Plugin/Roflcopter.Plugin.RS20223.csproj
@@ -31,6 +31,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Macros\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Macros\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsBase" />
