Workaround build errors in latest Rider SDK (downgrade to `2024.2.2`)

--- a/Src/PluginAndTests.props
+++ b/Src/PluginAndTests.props
@@ -10,7 +10,8 @@
     <ReSharperVersionYY>$([System.Text.RegularExpressions.Regex]::Match($(ReSharperVersionIdentifier), $(_ReSharperVersionIdentifierRegex)).Groups[2].Value)</ReSharperVersionYY>
     <ReSharperVersionMinor>$([System.Text.RegularExpressions.Regex]::Match($(ReSharperVersionIdentifier), $(_ReSharperVersionIdentifierRegex)).Groups[3].Value)</ReSharperVersionMinor>
 
-    <SdkNuGetPackageVersion>$(ReSharperVersionYYYY).$(ReSharperVersionMinor).*-*</SdkNuGetPackageVersion>
+    <!-- Workaround, drop with 2024.3: -->
+    <SdkNuGetPackageVersion>$(ReSharperVersionYYYY).$(ReSharperVersionMinor).2</SdkNuGetPackageVersion>
   </PropertyGroup>
 
   <PropertyGroup>
