Avoid unicode chars in Rider description

--- a/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
+++ b/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
@@ -3,7 +3,7 @@
   <name>Roflcopter</name>
   <description>
     <![CDATA[
-<p>Roflcopter (noun) 1&#x2024; a breeding ground for new ReSharper extensions 2&#x2024; a collection of small, handy ReSharper utilities.</p>
+<p>Roflcopter (noun) 1. a breeding ground for new ReSharper extensions 2. a collection of small, handy ReSharper utilities.</p>
 <p></p>
 
 <span>At the moment the following features have been ported to Rider.</span>
